Increase TASK_FINDER_VMA_ENTRY_ITEMS default.

Somewhat arbitrary default, this is often way too much for tracking
single process, but often too little when tracking whole system.
FIXME Would be nice to make this dynamic. PR11671

* runtime/task_finder_vma.c: Clean up some (bad) comments.
  #define TASK_FINDER_VMA_ENTRY_ITEMS 1536.